crates/capsec/tests/compile_fail/async_create_cannot_read.stderr
error[E0277]: the trait bound `AsyncWriteFile: AsyncRead` is not satisfied
 --> tests/compile_fail/async_create_cannot_read.rs:9:13
  |
9 |     check::<AsyncWriteFile>();
  |             ^^^^^^^^^^^^^^ the trait `AsyncRead` is not implemented for `AsyncWriteFile`
  |
  = help: the following other types implement trait `AsyncRead`:
            &[u8]
            &mut T
            AsyncReadFile
            Box<T>
            BufStream<RW>
            DuplexStream
            Pin<P>
            SimplexStream
          and $N others
note: required by a bound in `check`
 --> tests/compile_fail/async_create_cannot_read.rs:8:17
  |
8 |     fn check<T: tokio::io::AsyncRead>() {}
  |                 ^^^^^^^^^^^^^^^^^^^^ required by this bound in `check`
